attached_assets/Pasted-env-load-env-env-export-EXPO-PUBLIC-STRAVA-CLIENT-ID-EXPO-PUBLIC-STRAVA-CLIENT-SECRET-EXPO-PUBLIC-1751647148593_1751647148593.txt
env: load .env
env: export EXPO_PUBLIC_STRAVA_CLIENT_ID EXPO_PUBLIC_STRAVA_CLIENT_SECRET EXPO_PUBLIC_CLARIFAI_API_KEY EXPO_PUBLIC_GOOGLE_VISION_API_KEY EXPO_PUBLIC_EMAILJS_SERVICE_ID EXPO_PUBLIC_EMAILJS_TEMPLATE_ID EXPO_PUBLIC_EMAILJS_PUBLIC_KEY EXPO_PUBLIC_VPS_URL
JsonFileError: Error parsing JSON: {
  "name": "my-app",
  "main": "expo-router/entry",
  "version": "1.0.0",
  "scripts": {
    "start": "expo start",
    "reset-project": "node ./scripts/reset-project.js",
    "android": "expo start --android",
    "ios": "expo start --ios",
    "web": "expo start --web",
    "test": "jest --watchAll",
    "lint": "expo lint"
  },
  "jest": {
    "preset": "jest-expo"
  },
  "dependencies": {
    "@emailjs/react-native": "^5.1.0",
    "@expo/vector-icons": "^14.1.0",
    "@react-native-async-storage/async-storage": "2.1.2",
    "@react-navigation/bottom-tabs": "^7.3.10",
    "@react-navigation/elements": "^2.3.8",
    "@react-navigation/native": "^7.1.6",
    
    "expo": "53.0.17",
    "expo-auth-session": "~6.2.1",
    "expo-barcode-scanner": "^13.0.1",
    "expo-blur": "~14.1.5",
    "expo-constants": "~17.1.7",
    "expo-document-picker": "~13.1.6",
    "expo-font": "~13.3.2",
    "expo-haptics": "~14.1.4",
    "expo-health-connect": "^0.1.1",
    "expo-image": "~2.3.2",
    "expo-image-picker": "^16.1.4",
    "expo-linear-gradient": "~14.1.5",
    "expo-linking": "~7.1.7",
    
    "expo-router": "~5.1.3",
    "expo-splash-screen": "~0.30.10",
    "expo-status-bar": "~2.2.3",
    "expo-symbols": "~0.4.5",
    "expo-system-ui": "~5.0.10",
    "expo-web-browser": "~14.2.0",
    "react": "19.0.0",
    "react-dom": "19.0.0",
    "react-native": "0.79.5",
    "react-native-gesture-handler": "~2.24.0",
    "react-native-health": "^1.19.0",
    "react-native-reanimated": "~3.17.4",
    "react-native-safe-area-context": "5.4.0",
    "react-native-screens": "~4.11.1",
    "react-native-svg": "^15.11.2",
    "react-native-web": "~0.20.0",
    "react-native-webview": "13.13.5",
    
  },
  "devDependencies": {
    "@babel/core": "^7.25.2",
    "@types/react": "~19.0.10",
    "eslint": "^9.25.0",
    "eslint-config-expo": "~9.2.0",
    "jest": "^29.2.1",
    "jest-expo": "~53.0.9",
    "typescript": "~5.8.3"
  },
  "private": true
}

├─ File: /home/runner/workspace/package.json
└─ Cause: SyntaxError: Expected double-quoted property name in JSON at position 1709
  55 |     "react-native-webview": "13.13.5",
  56 |     
> 57 |   },
     |   ^
  58 |   "devDependencies": {
  59 |     "@babel/core": "^7.25.2",
  60 |     "@types/react": "~19.0.10",
JsonFileError: Error parsing JSON: {
  "name": "my-app",
  "main": "expo-router/entry",
  "version": "1.0.0",
  "scripts": {
    "start": "expo start",
    "reset-project": "node ./scripts/reset-project.js",
    "android": "expo start --android",
    "ios": "expo start --ios",
    "web": "expo start --web",
    "test": "jest --watchAll",
    "lint": "expo lint"
  },
  "jest": {
    "preset": "jest-expo"
  },
  "dependencies": {
    "@emailjs/react-native": "^5.1.0",
    "@expo/vector-icons": "^14.1.0",
    "@react-native-async-storage/async-storage": "2.1.2",
    "@react-navigation/bottom-tabs": "^7.3.10",
    "@react-navigation/elements": "^2.3.8",
    "@react-navigation/native": "^7.1.6",
    
    "expo": "53.0.17",
    "expo-auth-session": "~6.2.1",
    "expo-barcode-scanner": "^13.0.1",
    "expo-blur": "~14.1.5",
    "expo-constants": "~17.1.7",
    "expo-document-picker": "~13.1.6",
    "expo-font": "~13.3.2",
    "expo-haptics": "~14.1.4",
    "expo-health-connect": "^0.1.1",
    "expo-image": "~2.3.2",
    "expo-image-picker": "^16.1.4",
    "expo-linear-gradient": "~14.1.5",
    "expo-linking": "~7.1.7",
    
    "expo-router": "~5.1.3",
    "expo-splash-screen": "~0.30.10",
    "expo-status-bar": "~2.2.3",
    "expo-symbols": "~0.4.5",
    "expo-system-ui": "~5.0.10",
    "expo-web-browser": "~14.2.0",
    "react": "19.0.0",
    "react-dom": "19.0.0",
    "react-native": "0.79.5",
    "react-native-gesture-handler": "~2.24.0",
    "react-native-health": "^1.19.0",
    "react-native-reanimated": "~3.17.4",
    "react-native-safe-area-context": "5.4.0",
    "react-native-screens": "~4.11.1",
    "react-native-svg": "^15.11.2",
    "react-native-web": "~0.20.0",
    "react-native-webview": "13.13.5",
    
  },
  "devDependencies": {
    "@babel/core": "^7.25.2",
    "@types/react": "~19.0.10",
    "eslint": "^9.25.0",
    "eslint-config-expo": "~9.2.0",
    "jest": "^29.2.1",
    "jest-expo": "~53.0.9",
    "typescript": "~5.8.3"
  },
  "private": true
}

├─ File: /home/runner/workspace/package.json
└─ Cause: SyntaxError: Expected double-quoted property name in JSON at position 1709
  55 |     "react-native-webview": "13.13.5",
  56 |     
> 57 |   },
     |   ^
  58 |   "devDependencies": {
  59 |     "@babel/core": "^7.25.2",
  60 |     "@types/react": "~19.0.10",
    at parseJsonString (/home/runner/workspace/node_modules/@expo/json-file/build/JsonFile.js:198:19)
    at JsonFile.read (/home/runner/workspace/node_modules/@expo/json-file/build/JsonFile.js:160:12)
    at getPackageJsonAndPath (/home/runner/workspace/node_modules/@expo/config/build/Config.js:301:31)
    at getPackageJson (/home/runner/workspace/node_modules/@expo/config/build/Config.js:296:17)
    at hasDirectDevClientDependency (/home/runner/workspace/node_modules/@expo/cli/build/src/start/detectDevClient.js:39:86)
    at resolveOptionsAsync (/home/runner/workspace/node_modules/@expo/cli/build/src/start/resolveOptions.js:68:135)
    at expoStart (/home/runner/workspace/node_modules/@expo/cli/build/src/start/index.js:140:27)